Update license headers to 2026, fix deprecated URL constructor, and apply code formatting